LDEV-4054 Updating English

--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,33 +2,32 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 16:58:26 CST 2016 
  
 #=================== labels for Monitor (Java) =================# 
 
 button.finished  =Finished
-error.message.login  =You need login <a href="/lams/index.jsp">here</a>
 error.title  =Error occured
-label.synch.gate.title  =Synch Gate
-label.permission.gate.title  =Permission Gate
-label.schedule.gate.title  =Schedule Gate
-label.schedule.gate.open.message  =Schedule Gate will be opened at:
-label.schedule.gate.close.message  =Schedule Gate will be closed at:
+label.synch.gate.title  =Synch gate
+label.permission.gate.title  =Permission gate
+label.schedule.gate.title  =Schedule gate
+label.schedule.gate.open.message  =Schedule gate will be opened at:
+label.schedule.gate.close.message  =Schedule gate will be closed at:
 label.gate.you.open.message  =You may open the gate for the whole class
 label.gate.gate.open  =Gate has been opened
 label.gate.open  =Open
 label.gate.closed  =Closed
 label.gate.waiting.learners  ={0} out of {1} are waiting in front of the gate.
 label.grouping.max.num.in.group.heading  =Maximum number of groups:
-label.grouping.general.instructions.heading  =General Instructions:
+label.grouping.general.instructions.heading  =General instructions:
 label.grouping.general.instructions.line1  =Choose a course grouping to use in this lesson or create a new one. You are working with copies, so any changes made here have no influence on the original course groupings. Grouping with zero groups are not listed here. Once a grouping is chosen, the only way to come back to the grouping list is to manually remove all groups.
 label.grouping.general.instructions.line2  =Place the lesson participants in their groups. Initially you can add and remove learners, but once a groups is used (that is, a participant starts an activity that uses the grouping) you will not be able to remove learners from it. Even if a group is in use you can still add learners. The changes are saved immediately.
 label.grouping.group.heading  =Groups
-label.grouping.non.grouped.users.heading  =Learners without a Group
-label.grouping.grouped.users.heading  =Members of selected Group
+label.grouping.non.grouped.users.heading  =Learners without a group
+label.grouping.grouped.users.heading  =Members of selected group
 label.grouping.no.groups.created  =No groups have been created.
-label.grouping.loading  =( Loading... )
-error.grouping.data  =Required Information not received from server. Error Code:
+label.grouping.loading  =Loading...
+error.grouping.data  =Required information not received from server. Error code:
 error.grouping.add.group  =Please enter a new group name to add.
 error.grouping.remove.group  =Please select a group to remove.
 button.grouping.remove.selected.group  =Remove selected group
@@ -36,15 +35,15 @@ button.grouping.add.group  =Add group
 button.grouping.add.user.to.group  =Add selected to group
 button.grouping.remove.user.from.group  =Remove selected members
 monitor.title  =Monitor :: LAMS
-preview.deleted.title  =Preview Data Deleted
+preview.deleted.title  =Preview data deleted
 preview.deleted.message  =Preview data for {0} lesson(s) has been deleted.
 not.supported  =This option is not supported for this activity.
-NO.SUCH.LESSON  =No such Lesson with a lessonID of : {0} exists.
+NO.SUCH.LESSON  =No such lesson with a lessonID of : {0} exists.
 INVALID.ACTIVITYID  =Invalid activityID :{0}.
 INVALID.ACTIVITYID.TYPE  =Invalid Activity type: {0}. Only ToolActivity allowed.
 INVALID.ACTIVITYID.LESSONID  =Invalid activityID/lessonID : {0} : {1}.
 error.system.error  =An error has occurred. Please start again. Reason for error: {0}
-error.user.noprivilege  =Sorry, you do not have the privilege to do this action.
+error.user.noprivilege  =Sorry, you do not have the privilege to perform this action.
 force.complete.stop.message.activity.done  =Nothing changed as activity "{0}" is already complete.
 force.complete.stop.message.grouping.error  =Move to activity stopped at a grouping activity "{0}" due to system error.
 force.complete.stop.message.grouping  =Move to activity stopped at a grouping activity "{0}" that cannot be completed.
@@ -52,25 +51,21 @@ force.complete.stop.message.gate  =Move to activity stopped at a gate "{0}" that
 force.complete.stop.message.completed.to.activity  =Move to activity successful.
 force.complete.stop.message.completed.to.end  =Move to activity successful to end of the lesson.
 force.complete.stop.message.stopped.unexpectedly  =Move to activity has finished processing. Please check the learner's progress bar for their current activity.
-export.portfolio.window.title  =Export Portfolio
-export.portfolio.generating.message  =Generating portfolio - please wait.
-export.portfolio.generation.complete.message  =Your portfolio might take a while to generate. Once it's ready, your browser will begin downloading the file.
-audit.lesson.created  =Lesson "{0}" created with learning design "{1}", export portfolio for learner set to {2}.
-audit.learner.portfolio.set  =Lesson "{0}" has the export portfolio for learner set to {1}.
+audit.lesson.created  =Lesson "{0}" created with learning design "{1}".
 label.branching.general.instructions  =Place the lesson participants in their branches. Initially you can add and remove learners, but once a participant starts one of the branches then you will not be able to remove learners from any branches. If you try to remove someone from a branch and they will not remove then check their progress - if they start using the branch while you are on this screen you will not get any errors but you will not be able to remove them from the branch. You will still be able to add learners to branches.
 label.branching.branch.heading  =Branch
-label.branching.non.allocated.users.heading  =Learners without a Branch
-label.branching.allocated.users.heading  =Members of selected Branch
-button.branching.add.user.to.branch  =Add selected to Branch
-button.branching.remove.user.from.branch  =Remove selected from Branch
+label.branching.non.allocated.users.heading  =Learners without a branch
+label.branching.allocated.users.heading  =Members of selected branch
+button.branching.add.user.to.branch  =Add selected to branch
+button.branching.remove.user.from.branch  =Remove selected from branch
 label.branching.general.group.instructions  =Place the groups in their branches. Initially you can add and remove groups, but once a participant starts one of the branches then you will not be able to remove groups from any branches. You will still be able to add groups to branches.
-label.branching.non.allocated.groups.heading  =Groups without a Branch
-label.branching.allocated.groups.heading  =Groups of the selected Branch
+label.branching.non.allocated.groups.heading  =Groups without a branch
+label.branching.allocated.groups.heading  =Groups of the selected branch
 message.activity.parallel.noFrames  =Your browser does not handle frames!
 label.started  =Started
-label.not.started  =Not Started
+label.not.started  =Not started
 label.completed  =Completed
-label.condition.gate.title  =Condition Gate
+label.condition.gate.title  =Condition gate
 label.gate.allow  =Allow to pass
 label.gate.open.single.learner  =You may allow a single learner to pass the gate
 label.gate.list.all.learners  =Forbidden to pass
@@ -78,10 +73,10 @@ label.gate.list.waiting.learners  =Waiting in front of the gate
 label.gate.list.allowed.learners  =Allowed to pass
 label.grouping.status  =Status:
 label.grouping.functions  =Group functions:
-label.grouping.popup.change.group.name  =Change Group Name
+label.grouping.popup.change.group.name  =Change group name
 label.grouping.learners  =Learners
 label.grouping.popup.change.group.name.field  =Enter new name:
-label.grouping.popup.delete.group  =Delete Group
+label.grouping.popup.delete.group  =Delete group
 label.grouping.popup.delete.group.message  =Are you sure you want to delete this group?
 button.ok  =OK
 button.cancel  =Cancel
@@ -93,24 +88,9 @@ label.grouping.general.instructions.branching  =This grouping activity is used f
 label.grouping.popup.viewmode.message  =You are presently in group view mode. Groups can not be modified.
 label.gate.list.have.not.met.conditions.learners  =Have not met conditions
 message.gate.condition.force.pass  =Note: This will allow all learners to pass regardless of the specified conditions.
-chart.btn.activity.split  =Activity Split
-chart.btn_completion.rate  =Completion Rate
-chart.series.completed.time  =Completed Time
-chart.series.average.time  =Average Time
-chart.series.duration  =Duration
-chart.legend.average  =Average
-show.average.checkbox  =Show Average
+show.average.checkbox  =Show average
 search.learner.textbox  =Search
-chart.learner.linear.axis.title  =time (minutes)
-chart.learner.category.axis.title  =Activities
-chart.learner.datatip.average  =(average)
 label.learner  =Learner
-time.chart.panel.title  =Time Chart
-chart.time.format.hours  =hrs
-chart.time.format.minutes  =mins
-chart.time.format.seconds  =secs
-sys.error.msg.start  =You were unable to create a lesson.
-sys.error  =System Error
 title.lbl  =Title
 learner.lbl  =Learners {0}
 wizardTitle.x.lbl  =Lesson: {0}
@@ -118,7 +98,6 @@ al.alert  =Alert
 al.validation.msg2  =Title is a required field.
 summery.desc.lbl  =Description:
 summery.learners.lbl  =Learners:
-wizard.learner.expp.cb.lbl  =Enable export portfolio for learner
 al.validation.msg1  =A valid sequence must be selected.
 finish.btn  =Start in Monitor
 al.validation.schtime  =Please select a future date and time for scheduling.
@@ -127,8 +106,8 @@ al.validation.msg3.2  =There must be at least 1 monitor member and learner selec
 staff.group.name  ={0} monitors
 confirmMsg.4.txt  ={0} instances of {1} have been started.
 wizard.splitLearners.splitSum  ={0} instances of this lesson will be created and approximately {1} learners will be allocated to each lesson.
-wizard.splitLearners.LearnersPerLesson.lbl  =No. Learners per lesson:
-wizard.splitLearners.cb.lbl  =Split Learners into separate copies of this lesson?
+wizard.splitLearners.LearnersPerLesson.lbl  =No. learners per lesson:
+wizard.splitLearners.cb.lbl  =Split learners into separate copies of this lesson?
 wizard.learner.enLiveEdit.cb.lbl  =Enable Live Edit
 wizard.learner.enpres.cb.lbl  =Allow Learners to see who is online
 wizard.wkspc.date.modified.lbl  =Last modified: {0}
@@ -137,9 +116,8 @@ add.lesson.panel.title  =Add Lesson to {0}
 lesson.tab.label  =Lesson
 class.tab.label  =Class
 advanced.tab.label  =Advanced
-add.now.button.label  =Add now &gt;&gt;
 lesson.tab.heading.label  =Select the sequence to add a lesson, and click on Add now
-advanced.tab.form.advanced.options.label  =Advanced Options
+advanced.tab.form.advanced.options.label  =Advanced options
 advanced.tab.form.enable.im.label  =Enable Instant Messaging
 advanced.tab.form.scheduling.label  =Scheduling
 advanced.tab.form.enable.label  =Enable
@@ -211,19 +189,18 @@ lesson.class  =Class:
 lesson.manage  =Manage Lesson
 button.view.learners  =View/Email Learners
 button.view.learners.tooltip  =Shows all learners assigned to this lesson and allows to email them
-button.edit.class  =Edit Class
+button.edit.class  =Edit class
 button.edit.class.tooltip  =Edit the list of learners and monitors assigned to this lesson
 button.open.im  =Open IM
-lesson.change.state  =Change Status:
+lesson.change.state  =Change status:
 lesson.select.state  =Select status
 button.apply  =Apply
 lesson.change.state.tooltip  =Change the status of this lesson based on the drop down selection
 lesson.start  =Start:
 button.schedule  =Schedule
 button.schedule.tooltip  =Schedule lesson to start in a future time
-button.start.now  =Start Now
+button.start.now  =Start now
 button.start.now.tooltip  =Start the lesson immediately
-lesson.enable.portfolio  =Enable export portfolio for learner
 lesson.enable.presence  =Allow learners to see who is online
 lesson.enable.presence.alert  =Now learners can see who is online
 lesson.disable.presence.alert  =Now learners can not see who is online
@@ -231,9 +208,9 @@ lesson.enable.im  =Enable Instant Messaging
 lesson.enable.im.alert  =Instant Messaging is now enabled
 lesson.disable.im.alert  =Instant Messaging is now disabled
 lesson.required.tasks  =Required tasks
-lesson.task.gate  =Permission Gate
-lesson.task.grouping  =Choose Grouping
-lesson.task.branching  =Instructor Chosen Branching
+lesson.task.gate  =Permission gate
+lesson.task.grouping  =Choose grouping
+lesson.task.branching  =Instructor chosen branching
 button.task.go  =Go
 button.task.go.tooltip  =Complete this task now
 lesson.monitors  =Monitors
@@ -257,8 +234,7 @@ label.learner.progress.activity.completed.tooltip  =Double click to review this 
 label.learner.progress.activity.attempted.tooltip  =The learner has attempted but not yet finished this activity
 label.learner.progress.activity.tostart.tooltip  =The learner has to complete the activities before this activity to access it
 label.learner.progress.activity.support.tooltip  =Double click to open this support activity
-button.export.learner.tooltip  =Export this learner portfolio and save it on your computer for future reference
-button.timechart  =View Time Chart
+button.timechart  =Time chart
 button.timechart.tooltip  =View a chart of the selected learner progress against time for each activity
 learners.page  =Page
 learners.order  =Order by completion
@@ -266,9 +242,9 @@ learners.search.phrase.clear.tooltip  =Clear search results
 button.live.edit  =Live Edit
 button.live.edit.tooltip  =Edit the current design for this lesson
 button.live.edit.confirm  =Live Edit allows you to modify the design of your lesson while the learners are attempting it. If you continue, your design will appear in Authoring for you to modify. Once you have done your changes you MUST "Apply changes" to the design so learners can progress. If these changes are not applied, the learners will NOT be able to continue with the lesson. Do you want to continue?
-button.close.branching  =Close Branching
+button.close.branching  =Close branching
 button.close.branching.tooltip  =Close the currently open branching activity and come back to the top sequence
-button.journal.entries  =Journal Entries
+button.journal.entries  =Journal entries
 button.journal.entries.tooltip  =View all Journal Entries saved by Learners
 tab.lesson  =Lesson
 tab.sequence  =Sequence
@@ -278,9 +254,8 @@ force.complete.end.lesson.confirm  =Are you sure you want to move learner "[0]" 
 force.complete.activity.confirm  =Are you sure you want to move learner "[0]" to activity "[1]"?
 force.complete.drop.fail  =You have dropped the learner "[0]" on either its current or on its completed activity "[1]".
 force.complete.end.lesson.tooltip  =To move a learner to the end of lesson, drag the learner icon over to this bar.
-learner.group.list.title  =Learners:
 learner.group.count  =learners in total.
-learner.group.show  =Double-click to see the full list.
+learner.group.show  =Double-click for full list
 learner.finished.count  =Finished Learners: [0] of [1]
 learner.finished.dialog.title  =End of lesson
 learner.group.sort.button  =Sort
@@ -291,13 +266,12 @@ button.help  =Help
 button.help.tooltip  =Open help page
 button.refresh  =Refresh
 button.refresh.tooltip  =Reload the latest progress data
-button.export  =Export Portfolio
-button.export.tooltip  =Export the class portfolio and save it on your computer for future reference
-lesson.presence  =online learners
+lesson.presence  =Presence
 sequence.help.info  =Double click on an activity for more details
-lesson.learner.url  =Learner URL:
+lesson.learner.url  =Lesson URL:
 button.select  =Select
 lesson.copy.prompt  =(now press Ctrl+C to copy to clipboard)
+learner.group.select.all  =Select/Unselect all
 email.notifications.problems.sending.emails  =Some problems occurred while sending emails. Please, contact your system administrator.
 learner.group.remove.progress  =You are about to remove student(s) from a lesson. The student(s) will not have access to this lesson any longer. Do you also want to remove the student(s) progress?
 force.complete.remove.content  =You are moving learner "[0]" to activity "[1]". You can opt to delete the content of activities that have been previously done, so the learner has to enter the content/answers again.
@@ -308,13 +282,28 @@ audit.force.complete  =Attempted to force complete learner {0} to activityId:{1}
 audit.force.complete.end.lesson  =Attempted to force complete learner {0} to the end of the lesson. LessonId:{2}.
 lesson.task.content.edited  =Content being edited
 lesson.task.attention  =This activity requires attention
-lesson.task.define.later  =Define Later
+lesson.task.define.later  =Define later
 label.learner.progress.not.started  =The learner has not started the lesson yet
 button.save  =Save
 learner.group.forward.1  =Next page
 learner.group.forward.10  =10 pages forward
 learner.group.backward.1  =Previous page
 learner.group.backward.10  =10 pages back
-label.lesson.introduction=Lesson Introduction
+lesson.presence.count  =users
+email.notify.students.that  =Notify students that
+email.notifications.delete  =Delete notification
+email.notification.delete.alert1  =About to delete the scheduled notification: {0}
+email.notification.delete.alert2  =This cannot be undone. Do you want to delete?
+learner.group.multi.select  =(ctrl+click or \u2318+click to select multiple learners)
+lesson.im  =Instant messaging
+label.lesson.introduction  =Lesson introduction
+lesson.chart.title  =Lesson completion
+lesson.chart.started  =In progress
+lesson.chart.not.started  =Not started
+lesson.chart.completed  =Completed
+class.add.all.confirm  =Do you want to add all learners to the class?
+class.add.all.success  =All learners were added to the class
+button.edit.class.add.all  =Add all
 
-#======= End labels: Exported 310 labels for en AU =====
+
+#======= End labels: Exported 298 labels for en AU =====
