--- a/lams_common/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_common/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,13 +2,13 @@ appName = lams_common
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:06:13 CST 2016 
  
 #=================== labels for LAMS Common =================# 
 
-runsequences.folder.name  ={0} Run Sequences
-validation.error.other  =Other Error
-validation.error.transitionNoActivityBeforeOrAfter  =A Transition must have an activity before or after the transition
+runsequences.folder.name  ={0} Run sequences
+validation.error.other  =Other error
+validation.error.transitionNoActivityBeforeOrAfter  =A transition must have an activity before or after the transition
 validation.error.activityWithNoTransition  =An activity must have an input or output transition
 validation.error.inputTransitionType1  =This activity has no input transition
 validation.error.inputTransitionType2  =No activities are missing their input transition.
@@ -19,8 +19,8 @@ validation.error.GroupingNotRequired  =Grouping is not supported
 validation.error.GroupingSelected  =Grouping is selected but does not exist
 validation.error.OptionalActivity  =An Optional Activity must have one or more activities
 validation.error.OptionalActivityOrderId  =This Optional Activity has invalid order ids
-validation.error.illegalScheduleGateOffsetsType1  =A Schedule Gate cannot have equal start and end time offsets.
-validation.error.illegalScheduleGateOffsetsType2  =A Schedule Gate cannot have the start time offset greater than end time offset
+validation.error.illegalScheduleGateOffsetsType1  =A Schedule gate cannot have equal start and end time offsets.
+validation.error.illegalScheduleGateOffsetsType2  =A Schedule gate cannot have the start time offset greater than end time offset
 theme.service.setTheme.saved  =User theme saved.
 theme.service.setTheme.type.invalid  =Invalid theme type.
 theme.service.setTheme.noSuchTheme  =No such theme exists.
@@ -29,8 +29,8 @@ audit.change.entry  =Changed text for user {0}. Old text: {1} New Text: {2}
 audit.hide.entry  =Hide entry for user {0}. Entry was {1}
 audit.show.entry  =Show entry for user {0}. Entry was {1}
 group.name.prefix  =Group
-imported.permission.gate.title  =Permission Gate
-imported.synchronise.gate.title  =Synchronise Gate
+imported.permission.gate.title  =Permission gate
+imported.synchronise.gate.title  =Synchronise gate
 msg.import.file.format  =The import file must be a LAMS format .zip file exported from LAMS 2 or above, or a .las file exported from LAMS 1.0.2. You cannot import a design exported using the IMS Learning Design format.
 error.import.validation  =Validation error:
 error.import.matching.tool.not.found  =The activity with signature {0} is skipped because a matching tool cannot be found.
@@ -39,25 +39,25 @@ error.no.valid.tool  =No valid tools in this learning design.
 import.shareresources.warning  =The sequence contains one or more Share Resources activities. Please check these activities as any file or uploaded websites in the activity will be invalid and will cause an error for the learners. Links to external websites should not cause any errors.
 audit.user.password.change  =Password changed for: {0}
 audit.user.create  =Created user: {0}, Full Name: {1}
-validation.error.branching.must.have.a.branch  =A Branching Activity must have at least one Branch.
-validation.error.toolBranchingMustHaveDefaultBranch  =A Learner's Output Branching Activity must have a Default Branch.
-validation.error.sequenceActivityMustHaveFirstActivity  =A Branch must have a first Activity.
-validation.error.groupedBranchingMustHaveAGrouping  =A Group Based Branching Activity must have a Grouping Activity. Unless Define Later is turned on, it must have at least one group.
-validation.error.groupedBranchingMustHaveBranchForGroup  =A Group Based Branching Activity must have all Groups assigned to Branches.
+validation.error.branching.must.have.a.branch  =A Branching activity must have at least one Branch.
+validation.error.toolBranchingMustHaveDefaultBranch  =A learner's output branching activity must have a default branch.
+validation.error.sequenceActivityMustHaveFirstActivity  =A branch must have a first Activity.
+validation.error.groupedBranchingMustHaveAGrouping  =A group based branching activity must have a Grouping Activity. Unless Define Later is turned on, it must have at least one group.
+validation.error.groupedBranchingMustHaveBranchForGroup  =A group based branching activity must have all Groups assigned to Branches.
 validation.error.toolBranchingConditionInvalid  =A condition has a bad or missing comparison value.
-validation.error.toolBranchingMustHaveAnInputToolActivity  =A Learner's Output Branching Activity must have an Input Tool.
+validation.error.toolBranchingMustHaveAnInputToolActivity  =A learner's output branching activity must have an input tool.
 error.possibly.incompatible.version  =Cannot confirm that the .zip file is compatible with the current version of LAMS. It may be from a newer version of LAMS. Version from .zip file is {0}, current LAMS version is {1}. Import may fail.
 validation.error.group.count.mismatch  =More groups exist than the number of groups that should exist.
-validation.error.toolBranchingMustHaveACondition  = Learner's Output Branching Activity must have at least one condition.
+validation.error.toolBranchingMustHaveACondition  = Learner's output branching activity must have at least one condition.
 mail.resend.abandon.subject  =LAMS: Message delivery failed
 mail.resend.abandon.body1  =LAMS was resending a message to users, but eventually it gave up. The message was:\n
 mail.resend.abandon.body2  =\nUsers' login names:\n
-validation.error.conditionGateMustHaveACondition  =A Condition Gate must have at least one condition.
-validation.error.conditionGateMustHaveAnInputToolActivity  =A Condition Gate must have an Input Tool.
+validation.error.conditionGateMustHaveACondition  =A condition gate must have at least one condition.
+validation.error.conditionGateMustHaveAnInputToolActivity  =A condition gate must have an Input Tool.
 validation.error.FloatingActivity  =If you are planning to have support activities you need at least one support activity in the container.
 validation.error.FloatingActivity.maximum  =A maximum of {0} support activities is allow. Please remove one or more support activities.
 validation.error.first.activity  =You need at least one activity in the sequence.
-public.folder.name  =Public Folder
+public.folder.name  =Public folder
 email.notifications.problems.sending.emails  =Some problems occurred while sending emails. Please, contact your system administrator.
 email.notifications.course  =Course
 email.notifications.lesson.caption  =Lesson
@@ -65,5 +65,8 @@ email.notifications.lesson  =lesson
 email.notifications.tool  =tool
 email.notifications.activity  =activity
 error.requires.existing.grouping  =Activity {0} requires existing grouping but no group for user {1} exists yet.
+validation.error.GroupingNotUsed  =Grouping is not used in any of activities
+audit.change.mark  =Changed mark for user {0}. Old mark: {1}, new mark: {2}
 
-#======= End labels: Exported 58 labels for en AU =====
+
+#======= End labels: Exported 61 labels for en AU =====
