LDEV-4054 updating English

--- a/lams_tool_chat/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = chat
 #language code: en 
 #locale code: AU 
 
- # CVS ID: $Id$ Exported from the LAMS Community by Ernie Ghiglione on Tue Jul 26 02:20:00 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:19:44 CST 2016 
  
 #=================== labels for Chat =================# 
 
@@ -10,7 +10,7 @@ tool.display.name  =Chat
 tool.description  =Chat Tool
 activity.title  =Chat
 activity.description  =Chat Tool
-activity.helptext  =Syncronous Chat tool
+activity.helptext  =Syncronous chat tool
 pageTitle.authoring  =Chat Authoring
 button.basic  =Basic
 button.advanced  =Advanced
@@ -18,7 +18,7 @@ label.authoring.basic.title  =Title:
 label.authoring.basic.content  =Content:
 label.authoring.basic.instructions  =Instructions:
 advanced.lockOnFinished  =Lock when finished
-advanced.filteringEnabled  =Filter Messages (separate each filtered word with a comma ie: word1, word2, etc)
+advanced.filteringEnabled  =Filter messages (separate each filtered word with a comma ie: word1, word2, etc)
 instructions.type.online  =Online
 instructions.type.offline  =Offline
 label.filename  =Filename
@@ -26,7 +26,7 @@ label.type  =Type
 link.view  =View
 link.delete  =Delete
 message.updateSuccess  =Changes saved
-pageTitle.learning  =Online Chat
+pageTitle.learning  =Online chat
 message.defineLaterSet  =Please wait for the instructor to complete the contents of this activity.
 pageTitle.monitoring  =Chat Monitoring
 button.summary  =Summary
@@ -36,19 +36,18 @@ titleHeading.summary  =Summary
 titleHeading.instructions  =Instructions
 titleHeading.statistics  =Statistics
 titleHeading.editActivity  =Edit Activity
-titleHeading.exportPortfolio  =Export Portfolio
 heading.group  =Group {0}:
-heading.totalLearners  =Number of Learners:
-heading.totalLearnersInGroup  =Total Number of Learners in Group:
-heading.totalMessages  =Total Number of Messages:
-heading.recentMessages  =Most Recent Messages:
+heading.totalLearners  =Learners:
+heading.totalLearnersInGroup  =Total number of learners in group:
+heading.totalMessages  =Total number of messages:
+heading.recentMessages  =Recent messages:
 message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
 message.summary  =There is no summary available for this tool.
 message.noChatMessages  =There are no messages available for this group.
-summary.editMessages  =Edit Messages
-summary.openChat  =Open Chat
-chatHistory.hideMessage  =Hide Message
-label.sendMessageTo  =Send Message To:
+summary.editMessages  =Edit messages
+summary.openChat  =Open chat
+chatHistory.hideMessage  =Hide message
+label.sendMessageTo  =Send message to:
 label.everyone  =Everyone
 message.loading  =Please wait, loading chat client.
 button.send  =Send
@@ -62,15 +61,6 @@ button.next  =Next
 label.save  =Save
 label.cancel  =Cancel
 error.missingParam  =Unable to continue. {0} is missing.
-error.exceedMaxFileSize  =File size exceeded
-error.exception.NbApplication  =An internal error has occured with the Chat Tool. If reporting this error, please report: <br/> <b>{0}</b>
-error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
-error.content.locked  =The content has been locked since it is being used by one or more learners. The modification of the content is not allowed.
-error.defineLater  =Sorry, the activity is not ready yet. Please wait for the instructor to finishing defining the activity.
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
-error.mandatoryField  ={0} field is mandatory.
-error.mark.invalid.number  ={0} field must be a valid number. Decimal points are not allowed.
-error.mark.invalid.decimal.number  ={0} field must be a valid decimal number.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 pageTitle.monitoring.chatHistory  =Chat History
 button.try.again  =Try again
@@ -79,8 +69,8 @@ button.reflect  =Reflect on chat
 button.continue  =Continue
 heading.numPosts  =No. of posts
 heading.learner  =Learner
-heading.reflection  =Notebook Entry
-pageTitle.monitoring.notebook  =View Notebook Entries
+heading.reflection  =Notebook entry
+pageTitle.monitoring.notebook  =Notebook entries
 button.edit  =Edit
 message.no.reflection.available  =No notebook available
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
@@ -106,7 +96,6 @@ label.authoring.edit  =Edit
 error.condition.name.blank  =Condition name can not be blank.
 error.condition.duplicated.name  =Duplicated name. Please choose unique one.
 error.condition  =Error creating condition.
-output.desc.learner.number.of.posts  =Learner's number of postings in the Chat
 output.desc.text.search.output.definition.chat  =Messages contain certain words
 text.search.output.definition.chat.default.condition  =Messages contain word "LAMS"
 textsearch.heading  =Messages that...
@@ -123,13 +112,13 @@ authoring.info.teacher.set.restriction  =For this activity, the instructor fixed
 monitor.summary.notification  =Notification
 monitor.summary.date.restriction.set  =Deadline has been set
 monitor.summary.date.restriction.removed  =Deadline has been removed
-output.desc.all.users.messages.output.definition.chat  =All learners' messages sent in the Chat
-output.desc.user.messages.output.definition.chat =Current learner's messages sent in the Chat
+output.desc.all.users.messages.output.definition.chat  =Each learner's messages sent in the Chat
 button.submit  =Finish
 label.reflections  =Reflections
 label.chat.options  =Chat options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
+output.desc.learner.number.of.posts  =Number of posts
 
 
-#======= End labels: Exported 122 labels for en AU =====
+#======= End labels: Exported 113 labels for en AU =====
