--- a/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = voting
 #language code: es 
 #locale code: ES 
 
- # CVS ID: $Id$ Exported from the LAMS Community by Ernie Ghiglione on Fri Jul 22 23:57:04 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:30:09 CST 2016 
  
 #=================== labels for Voting =================# 
 
@@ -21,8 +21,6 @@ label.editActivity  =Editar Actividad
 label.authoring  =Creaci\u00f3n de Votos
 label.learning  =Votaci\u00f3n
 label.preview  =Inspecci\u00f3n previa
-label.exportPortfolio  =Exportar Portfolio
-label.exportPortfolio.simple  =Exportar Portfolio
 label.authoring.vote.basic  =Defina las nominaciones de la votaci\u00f3n
 label.monitoring  =Monitorear Votaci\u00f3n
 label.allowText  =Permitir a los estudiantes una entrada de su elecci\u00f3n
@@ -47,13 +45,8 @@ button.add  =A\u00f1adir
 button.remove  =Borrar
 button.submit  =Enviar
 sbmt.successful  =El contenido se ha creado
-label.offlineInstructions  =Instrucciones modo Offline
-label.onlineInstructions  =Instrucciones modo Online
-label.uploadedOfflineFiles  =Lista de Archivos Offline:
-label.uploadedOnlineFiles  =Lista de Archivos Online:
 label.save  =Guardar
 label.cancel  =Cancelar
-label.title.export  =Detalles del estudiante
 error.maxNominationCount.invalid  =El n\u00famero maximo de nominacion en la pesta\u00f1a de Avanzado es inv\u00e1lido.
 error.content.inUse  =No se puede modificar el contenido de esta actividad ya que al menos un estudiante ha accedido a la misma
 error.noLearnerActivity  =El resumen de actividad no esta disponible ya que ningun estudiante ha accedido a la misma
@@ -90,9 +83,6 @@ label.view.piechart  =Ver Gr\u00e1fico de Torta
 label.view.barchart  =Ver Gr\u00e1fico de Barras
 label.visible  =Visible
 label.select.statsSession  =Seleccione un grupo para ver estad\u00edsticas
-label.export.learner  =Portfolio para Estudiante
-label.export.teacher  =Portfolio para Instructor
-label.export  =Export Portfolio
 label.class.summary  =Resumen de Votaci\u00f3n
 label.class.summaryAll  =Todos los Votos
 label.individual.learnerVotes  =Votos de Estudiante
@@ -172,4 +162,4 @@ js.error.validate.number  =Hay un error con el n\u00famero m\u00ednimo y/o m\u00
 label.search  =Buscar...
 
 
-#======= End labels: Exported 164 labels for es ES =====
+#======= End labels: Exported 154 labels for es ES =====
