--- a/lams_tool_vote/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = voting
 #language code: en 
 #locale code: AU 
 
- # CVS ID: $Id$ Exported from the LAMS Community by Ernie Ghiglione on Fri Jul 22 23:57:07 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:30:13 CST 2016 
  
 #=================== labels for Voting =================# 
 
@@ -21,8 +21,6 @@ label.editActivity  =Edit activity
 label.authoring  =Voting Authoring
 label.learning  =Voting Learning
 label.preview  =Voting preview
-label.exportPortfolio  =Voting export portfolio
-label.exportPortfolio.simple  =Export portfolio
 label.authoring.vote.basic  =Please define the nominations
 label.monitoring  =Voting Monitoring
 label.allowText  =Allow text entry
@@ -47,13 +45,8 @@ button.add  =Add
 button.remove  =Delete
 button.submit  =Submit
 sbmt.successful  =The content has been created successfully.
-label.offlineInstructions  =Offline instructions
-label.onlineInstructions  =Online instructions
-label.uploadedOfflineFiles  =Uploaded offline files:
-label.uploadedOnlineFiles  =Uploaded online files:
 label.save  =Save
 label.cancel  =Cancel
-label.title.export  =Learner submission details
 error.maxNominationCount.invalid  =The "Maximum votes" field in Advanced section is invalid.
 error.content.inUse  =Modification of the content is not allowed since it is being used.
 error.noLearnerActivity  =The report is not available since no learners attempted the activity yet.
@@ -90,9 +83,6 @@ label.view.piechart  =Pie chart
 label.view.barchart  =Bar chart
 label.visible  =Visible
 label.select.statsSession  =Please select a group to view class statistics
-label.export.learner  =Export portfolio for learner
-label.export.teacher  =Portfolio export for instructor
-label.export  =Export portfolio
 label.class.summary  =Class summary
 label.class.summaryAll  =Summary
 label.individual.learnerVotes  =Votes
@@ -172,4 +162,4 @@ js.error.validate.number  =There is an error with the minimum and/or maximum num
 label.search  =Search...
 
 
-#======= End labels: Exported 164 labels for en AU =====
+#======= End labels: Exported 154 labels for en AU =====
