--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,14 +2,14 @@ appName = notebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 23 13:12:47 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:33:49 CST 2016 
  
 #=================== labels for Notebook =================# 
 
 tool.display.name  =Notebook
 tool.description  =Notebook Tool
 activity.title  =Notebook
-activity.description  =Notebook Tool
+activity.description  =Notebook tool
 activity.helptext  =Notebook for notes and reflections
 pageTitle.authoring  =Notebook Authoring
 button.basic  =Basic
@@ -23,7 +23,7 @@ label.filename  =Filename
 label.type  =Type
 message.updateSuccess  =Changes saved
 message.unsavedChanges  =Page contains unsaved changes
-pageTitle.learning  =Online Notebook
+pageTitle.learning  =Online notebook
 message.defineLaterSet  =Please wait for the instructor to complete the contents of this activity
 pageTitle.monitoring  =Notebook Monitoring
 button.summary  =Summary
@@ -56,7 +56,7 @@ label.lastModified  =Last modified
 label.notebookEntry  =Notebook entry
 error.missingParam  =Unable to continue. {0} is missing.
 error.exceedMaxFileSize  =File size exceeded
-error.exception.NbApplication  =An internal error has occured with the Notebook Tool. If reporting this error, please report: {0}
+error.exception.NbApplication  =An internal error has occured with the Notebook tool. If reporting this error, please report: {0}
 error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
 error.content.locked  =The content has been locked since it is being used by one or more learners. The modification of the content is not allowed.
 error.defineLater  =Sorry, the activity is not ready yet. Please wait for the instructor to finishing defining the content of the activity.
