LDEV-4054 updating English, Greek

--- a/lams_tool_survey/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:42:19 CST 2016 
  
 #=================== labels for Survey =================# 
 
@@ -54,11 +54,6 @@ label.next  =Next
 label.previous  =Previous
 label.of  =of
 error.upload.failed  =Upload file failed: {0}
-error.msg.upload.file.not.found  =Could not find upload file {0}.
-error.msg.file.not.found  =File not found exception occurs when uploading file.
-error.msg.io.exception  =IOException occurs when uploading file.
-error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
-error.msg.repository  =Repository occurs exception while trying to upload file.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
 error.mandatory.question  =Mandatory question, please give answer.
 msg.no.instruction  =No instruction available.
@@ -81,8 +76,6 @@ label.monitoring.edit.activity.update  =Update
 label.monitoring.edit.activity.edit  =Edit
 message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
 export.label.survey  =Survey
-error.inputFileTooLarge  =Input File size is too large!
-error.uploading  =error uploading
 error.title.empty  =Title can not be blank
 label.open  =Open
 label.delete  =Delete
@@ -94,7 +87,7 @@ label.finish  =Next Activity
 button.upload  =Upload
 button.add  =Add
 button.cancel  =Cancel
-message.monitoring.summary.no.session  =No Session Available
+message.monitoring.summary.no.session  =No session available
 label.show  =Show
 label.hide  =Hide
 label.save  =Save
@@ -103,20 +96,20 @@ monitoring.label.access.time  =Access time
 define.later.message  =Please wait for the instructor to complete the contents of this activity.
 message.monitoring.summary.no.survey.for.group  =No survey available for this group.
 button.try.again  =Try again
-label.up  =Move Up
-label.down  =Move down
+label.up  =Up
+label.down  =Down
 label.monitoring.heading.access  =Learners list
 label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Survey with the following instructions:
-error.reflection.emtpy  =Please input Notebook Entry
-title.reflection  =Notebook Entry
+error.reflection.emtpy  =Please input Notebook entry
+title.reflection  =Notebook entry
 label.continue  =Continue
 monitoring.user.fullname  =Name
-monitoring.user.reflection  =Notebook Entry
-page.title.monitoring.view.reflection  =View Notebook Entries
+monitoring.user.reflection  =Notebook entry
+page.title.monitoring.view.reflection  =Notebook entries
 button.close  =Close
 label.open.response  =Open response
-piechart.title  =Question {0} Pie Chart
-barchart.title  =Question {0} Column Chart
+piechart.title  =Question {0} Pie chart
+barchart.title  =Question {0} Column chart
 barchart.category.axis.label  =Candidate Answer
 barchart.value.axis.label  =Percentage
 message.view.pie.chart  =View pie chart
@@ -127,7 +120,7 @@ message.learner.choose.answer.percentage  ={0} percent learners of the class hav
 message.learner.choose.answer  =The learner has chosen this answer
 error.chart.gen  =Error occurs during generating chart, please try again.
 error.single.choice.over  =Only one option or open text can be chosen.
-title.chart.report  =Report of Individual Question
+title.chart.report  =Report of individual question
 label.answer  =Answer
 label.session.name  =Session Name
 label.number.learners  =# of learners
@@ -187,6 +180,9 @@ label.total.responses  =Total responses so far: {0}
 message.no.reflection.available  =No notebook entry has been added.
 label.search  =Search...
 label.answer.required  =Answer required
+label.survey.options  =Options
+label.activity.completion  =End of activity
+label.notifications  =Notifications
 
 
-#======= End labels: Exported 181 labels for en AU =====
+#======= End labels: Exported 177 labels for en AU =====
