--- a/lams_tool_survey/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:42:22 CST 2016 
  
 #=================== labels for Survey =================# 
 
@@ -54,11 +54,6 @@ label.next  =\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf
 label.previous  =\u03a0\u03c1\u03bf\u03b7\u03b3\u03bf\u03cd\u03bc\u03b5\u03bd\u03bf
 label.of  =\u03c4\u03bf\u03c5
 error.upload.failed  =\u0391\u03c0\u03ad\u03c4\u03c5\u03c7\u03b5 \u03b7 \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5: {0}
-error.msg.upload.file.not.found  =\u0394\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b2\u03c1\u03b5\u03b8\u03b5\u03af \u03c4\u03bf \u03b1\u03bd\u03b5\u03b2\u03b1\u03c3\u03bc\u03ad\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf {0} .
-error.msg.file.not.found  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5 \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b5 \u03bb\u03ac\u03b8\u03bf\u03c2 \u03b5\u03be\u03b1\u03af\u03c1\u03b5\u03c3\u03b7\u03c2 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
-error.msg.io.exception  =\u039c\u03b9\u03b1 \u03b5\u03be\u03b1\u03af\u03c1\u03b5\u03c3\u03b7 \u0395\u03b9\u03c3\u03cc\u03b4\u03bf\u03c5/\u0395\u03be\u03cc\u03b4\u03bf\u03c5 \u03b5\u03bc\u03c6\u03b1\u03bd\u03af\u03b6\u03b5\u03c4\u03b1\u03b9 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5.
-error.msg.invaid.param.upload  =\u0395\u03be\u03b1\u03af\u03c1\u03b5\u03c3\u03b7\u0386\u03ba\u03c5\u03c1\u03b7\u03c2\u03a0\u03b1\u03c1\u03b1\u03bc\u03ad\u03c4\u03c1\u03bf\u03c5 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7 \u03b4\u03b9\u03ac\u03c1\u03ba\u03b5\u03b9\u03b1 \u03c4\u03bf\u03c5 \u03b1\u03bd\u03b5\u03b2\u03ac\u03c3\u03bc\u03b1\u03c4\u03bf\u03c2 \u0391\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
-error.msg.repository  =\u0397 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b7 \u03b5\u03bc\u03c6\u03b1\u03bd\u03af\u03b6\u03b5\u03b9 \u03bc\u03af\u03b1 \u03b5\u03be\u03b1\u03af\u03c1\u03b5\u03c3\u03b7 \u03c3\u03c4\u03b7\u03bd \u03c0\u03c1\u03bf\u03c3\u03c0\u03ac\u03b8\u03b5\u03b9\u03b1 \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae\u03c2 \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5.
 error.msg.default.content.not.find  =\u0394\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af\u03c4\u03b5 \u03bd\u03b1 \u03be\u03b1\u03bd\u03b1\u03c0\u03ac\u03c1\u03b5\u03c4\u03b5 \u03c4\u03b7\u03bd \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u03c4\u03bf\u03c5 \u03c0\u03c1\u03bf\u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad\u03bd\u03bf\u03c5 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf
 error.mandatory.question  =\u03a5\u03c0\u03bf\u03c7\u03c1\u03b5\u03c9\u03c4\u03b9\u03ba\u03ae \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7, \u03c0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03c4\u03b5
 msg.no.instruction  =\u0394\u03b5\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03b4\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03b7 \u03bf\u03b4\u03b7\u03b3\u03af\u03b1
@@ -81,9 +76,6 @@ label.monitoring.edit.activity.update  =\u0395\u03bd\u03b7\u03bc\u03ad\u03c1\u03
 label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
 message.monitoring.edit.activity.not.editable  =\u0397 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03c0\u03b9\u03b1 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03ac\u03c3\u03b9\u03bc\u03b7.
 export.label.survey  =\u0388\u03c1\u03b5\u03c5\u03bd\u03b1
-export.title  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03a6\u03b1\u03ba\u03ad\u03bb\u03bf\u03c5 \u0395\u03c1\u03b3\u03b1\u03c3\u03b9\u03ce\u03bd \u03c4\u03b7\u03c2 \u0388\u03c1\u03b5\u03c5\u03bd\u03b1\u03c2
-error.inputFileTooLarge  =\u03a4\u03bf \u03b5\u03b9\u03c3\u03b1\u03b3\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b5\u03af\u03bd\u03b1\u03b9 \u03bc\u03b5\u03b3\u03ac\u03bb\u03bf\u03c5 \u03bc\u03b5\u03b3\u03ad\u03b8\u03bf\u03c5\u03c2
-error.uploading  =\u039b\u03ac\u03b8\u03bf\u03c2 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae
 error.title.empty  =\u039f \u03a4\u03af\u03c4\u03bb\u03bf\u03c2 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc
 label.open  =\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1
 label.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
@@ -185,6 +177,12 @@ label.view.all.responses  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03cc\u03
 label.sort.by.answer  =\u03a4\u03b1\u03be\u03b9\u03bd\u03cc\u03bc\u03b7\u03c3\u03b7 \u03b1\u03bd\u03ac \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7
 label.other.answers  =\u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03c4\u03c9\u03bd \u03ac\u03bb\u03bb\u03c9\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03c9\u03bd
 label.total.responses  =\u03a3\u03c5\u03bd\u03bf\u03bb\u03b9\u03ba\u03ad\u03c2 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03ad\u03c9\u03c2 \u03c4\u03ce\u03c1\u03b1 {0}
+message.no.reflection.available  =\u039a\u03b1\u03bc\u03af\u03b1 \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03c0\u03c1\u03bf\u03c3\u03c4\u03b5\u03b8\u03b5\u03af \u03c3\u03c4\u03bf \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf.
+label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
+label.answer.required  =\u0391\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7
+label.survey.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u0388\u03c1\u03b5\u03c5\u03bd\u03b1\u03c2
+label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2
 
 
-#======= End labels: Exported 179 labels for el GR =====
+#======= End labels: Exported 177 labels for el GR =====
